R Config Properties Settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.gitignore.io/api/r
 # Edit at https://www.gitignore.io/?templates=r
 
+## Add Ignore ##
+
 ### R ###
 # History files
 .Rhistory
